--- a/index.html
+++ b/index.html
@@ -23,6 +23,72 @@
                 <img src="img/slide1.jpg" alt="">
             </div>
         </div>
+        <div class="__dd__block-tw">
+            <div class="__dd__block-tw__inner">
+                <div class="__dd__block-tw__top">
+                    <div class="__dd__heading __dd__is--white __dd__is--center">
+                        <div class="__dd__heading__text">О проекте</div>
+                    </div>
+                    <div class="__dd__descs __dd__container">
+                        <div class="__dd__descs__inner">
+                            <div class="__dd__descs__block">
+                                <div class="__dd__descs__block__heading">Задача</div>
+                                <div class="__dd__descs__block__text">Чайхана Шари Вари - это двухэтажный ресторан с кальянами,
+                                    живой музыкой и восточной кухней. Перед нами встала задача изготовить полиграфическую продукцию в фирменном стиле заведения, где главными факторами были единство и отражение многогранности, красочности и своеобразной идеологии ресторана.</div>
+                            </div>
+                            <div class="__dd__descs__block">
+                                <div class="__dd__descs__block__heading">Решение</div>
+                                <div class="__dd__descs__block__text">В рамках фирменного стиля заведения нами были изготовлены барные карты и обеденное меню, а также разработан дизайн основного меню, винных карт, тейбл-тенты и фирменные наклейки в стиле ресторана.</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="__dd__block-tw__bottom"><img src="img/bl2.jpg" alt=""></div>
+            </div>
+        </div>
+        <!-- block3 -->
+        <!-- block4 -->
+        <div class="__dd__block-fv __dd__is--red">
+            <div class="__dd__block-fv__inner">
+                <div class="__dd__block-fv__block">
+                    <div class="__dd__block-fv__block__inner">
+                        <img src="img/bl5_1.jpg" alt="">
+                    </div>
+                </div>
+                <div class="__dd__block-fv__block">
+                    <div class="__dd__block-fv__block__inner">
+                        <img src="img/bl5_2.jpg" alt="">
+                    </div>
+                </div>
+                <div class="__dd__block-fv__block">
+                    <div class="__dd__block-fv__block__inner">
+                        <img src="img/bl5_3.jpg" alt="">
+                    </div>
+                </div>
+                <div class="__dd__block-fv__block">
+                    <div class="__dd__block-fv__block__inner">
+                        <img src="img/bl5_4.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- block6 -->
+        <div class="__dd__block-fv __dd__is--dark">
+            <div class="__dd__block-fv__inner">
+                <div class="__dd__block-fv__block">
+                    <div class="__dd__block-fv__block__inner">
+                        <img src="img/bl7_1.jpg" alt="">
+                    </div>
+                </div>
+                <div class="__dd__block-fv__block">
+                    <div class="__dd__block-fv__block__inner">
+                        <img src="img/bl7_2.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- block8 -->
+        <!-- block9 -->
     </div>
     <script src="dist/js/jquery-3.3.1.min.js"></script>
     <script src="dist/js/svg4everybody.min.js"></script>
