--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,6 +11,14 @@
     <div class="__dd">
         @@include('blocks/block.banner.html')
         @@include('blocks/block1.html')
+        @@include('blocks/block2.html')
+        @@include('blocks/block3.html')
+        @@include('blocks/block4.html')
+        @@include('blocks/block5.html')
+        @@include('blocks/block6.html')
+        @@include('blocks/block7.html')
+        @@include('blocks/block8.html')
+        @@include('blocks/block9.html')
     </div>
     <script src="dist/js/jquery-3.3.1.min.js"></script>
     <script src="dist/js/svg4everybody.min.js"></script>
