--- a/index.html
+++ b/index.html
@@ -33,66 +33,164 @@
                         <div class="__dd__descs__inner">
                             <div class="__dd__descs__block">
                                 <div class="__dd__descs__block__heading">Задача</div>
-                                <div class="__dd__descs__block__text">Чайхана Шари Вари - это двухэтажный ресторан с кальянами,
-                                    живой музыкой и восточной кухней. Перед нами встала задача изготовить полиграфическую продукцию в фирменном стиле заведения, где главными факторами были единство и отражение многогранности, красочности и своеобразной идеологии ресторана.</div>
+                                <div class="__dd__descs__block__text">Чайхана Шари Вари - это двухэтажный ресторан с кальянами, <br>
+                                    живой музыкой и восточной кухней. Перед нами встала задача <br>
+                                    изготовить полиграфическую продукцию в фирменном стиле <br>
+                                    заведения, где главными факторами были единство и отражение <br>
+                                    многогранности, красочности и своеобразной идеологии ресторана.</div>
                             </div>
                             <div class="__dd__descs__block">
                                 <div class="__dd__descs__block__heading">Решение</div>
-                                <div class="__dd__descs__block__text">В рамках фирменного стиля заведения нами были изготовлены барные карты и обеденное меню, а также разработан дизайн основного меню, винных карт, тейбл-тенты и фирменные наклейки в стиле ресторана.</div>
+                                <div class="__dd__descs__block__text">В рамках фирменного стиля заведения нами <br>
+                                    были изготовлены барные карты и обеденное <br>
+                                    меню, а также разработан дизайн основного <br>
+                                    меню, винных карт, тейбл-тенты и фирменные <br>
+                                    наклейки в стиле ресторана.</div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="__dd__block-tw__bottom"><img src="img/bl2.jpg" alt=""></div>
+                <div class="__dd__block-tw__bottom __dd__anim" data-animtype="fadeInUp"><img src="img/bl2.jpg" alt=""></div>
             </div>
         </div>
-        <!-- block3 -->
-        <!-- block4 -->
+        <div class="__dd__block-th">
+            <div class="__dd__block-th__inner">
+                <div class="__dd__block-th__top">
+                    <div class="__dd__heading __dd__is--white __dd__is--left">
+                        <div class="__dd__heading__text">Основное меню</div>
+                    </div>
+                    <div class="__dd__descs __dd__container">
+                        <div class="__dd__descs__inner">
+                            <div class="__dd__descs__block">
+                                <div class="__dd__descs__block__text">Разработали и изготовили дизайн основного меню <br>
+                                    в общей стилистике заведения. Обложку мы сделали <br>
+                                    в тёмном стиле с применением метода лакирования, <br>
+                                    что придаёт чувства стиля и подчеркивает <br> изысканность ресторана. </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="__dd__block-th__bottom __dd__anim" data-animtype="fadeInRight"><img src="img/bl3.jpg" alt=""></div>
+            </div>
+        </div>
+        <div class="__dd__block-fo">
+            <div class="__dd__block-fo__inner">
+                <div class="__dd__block-fo__carousel">
+                    <div class="__dd__block-fo__carousel__items">
+                        <div class="__dd__block-fo__carousel__items__block">
+                            <img src="img/cr_1.png" alt="">
+                        </div>
+                        <div class="__dd__block-fo__carousel__items__block">
+                            <img src="img/cr_2.png" alt="">
+                        </div>
+                        <div class="__dd__block-fo__carousel__items__block">
+                            <img src="img/cr_3.png" alt="">
+                        </div>
+                        <div class="__dd__block-fo__carousel__items__block">
+                            <img src="img/cr_4.png" alt="">
+                        </div>
+                    </div>
+                    <div class="__dd__block-fo__carousel__controls">
+                        <button class="is--prev"><img src="img/control.png"></button>
+                        <button class="is--next"><img src="img/control.png"></button>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="__dd__block-fv __dd__is--red">
             <div class="__dd__block-fv__inner">
                 <div class="__dd__block-fv__block">
                     <div class="__dd__block-fv__block__inner">
-                        <img src="img/bl5_1.jpg" alt="">
+                        <img src="img/bl5_placeholder.jpg" data-src="img/bl5_1.jpg" class="lazy">
                     </div>
                 </div>
                 <div class="__dd__block-fv__block">
                     <div class="__dd__block-fv__block__inner">
-                        <img src="img/bl5_2.jpg" alt="">
+                        <img src="img/bl5_placeholder.jpg" data-src="img/bl5_2.jpg" class="lazy">
                     </div>
                 </div>
                 <div class="__dd__block-fv__block">
                     <div class="__dd__block-fv__block__inner">
-                        <img src="img/bl5_3.jpg" alt="">
+                        <img src="img/bl5_placeholder.jpg" data-src="img/bl5_3.jpg" class="lazy">
                     </div>
                 </div>
                 <div class="__dd__block-fv__block">
                     <div class="__dd__block-fv__block__inner">
-                        <img src="img/bl5_4.jpg" alt="">
+                        <img src="img/bl5_placeholder.jpg" data-src="img/bl5_4.jpg" class="lazy">
                     </div>
                 </div>
             </div>
         </div>
-        <!-- block6 -->
+        <div class="__dd__block-sx">
+            <div class="__dd__block-sx__inner">
+                <div class="__dd__block-sx__top">
+                    <div class="__dd__heading __dd__is--dark __dd__is--left">
+                        <div class="__dd__heading__text">Винная карта</div>
+                    </div>
+                    <div class="__dd__descs __dd__container">
+                        <div class="__dd__descs__inner">
+                            <div class="__dd__descs__block is--purple">
+                                <div class="__dd__descs__block__text">Выполненная нами полиграфическая продукция на дизайнерской фактурной бумаге Лён, цвет: Слоновая кость. Общий дизайн строится на гравюрах, поверх которых разводы вина. При использовании профессиональных красок и печати на дизайнерской бумаге создаётся чувство, будто на каждой из них стоял бокал настоящего вина, но что-то пошло не так.</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="__dd__block-sx__bottom __dd__anim" data-animtype="fadeInUp"><img src="img/bl6.jpg" alt=""></div>
+            </div>
+        </div>
         <div class="__dd__block-fv __dd__is--dark">
             <div class="__dd__block-fv__inner">
                 <div class="__dd__block-fv__block">
                     <div class="__dd__block-fv__block__inner">
-                        <img src="img/bl7_1.jpg" alt="">
+                        <img src="img/bl5_placeholder.jpg" data-src="img/bl7_1.jpg" class="lazy">
                     </div>
                 </div>
                 <div class="__dd__block-fv__block">
                     <div class="__dd__block-fv__block__inner">
-                        <img src="img/bl7_2.jpg" alt="">
+                        <img src="img/bl5_placeholder.jpg" data-src="img/bl7_2.jpg" class="lazy">
                     </div>
                 </div>
             </div>
         </div>
-        <!-- block8 -->
-        <!-- block9 -->
+        <div class="__dd__block-ei">
+            <div class="__dd__block-ei__inner">
+                <div class="__dd__block-ei__top">
+                    <div class="__dd__heading __dd__is--white __dd__is--left">
+                        <div class="__dd__heading__text">Table tent</div>
+                    </div>
+                    <div class="__dd__descs __dd__container">
+                        <div class="__dd__descs__inner">
+                            <div class="__dd__descs__block is--pepper">
+                                <div class="__dd__descs__block__heading">Задача</div>
+                                <div class="__dd__descs__block__text">Дизайн и полиграфическая продукция были разработаны и изготовлены специально для мероприятия «Ночь пожирателей рекламы 2019». Изделие выполнено в мексиканском стиле
+                                    и частично повторяет стиль билборда этого мероприятия.</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="__dd__block-ei__bottom __dd__anim" data-animtype="fadeInRight"><img src="img/bl8.jpg" alt=""></div>
+            </div>
+        </div>
+        <div class="__dd__block-ni">
+            <div class="__dd__block-ni__inner">
+                <div class="__dd__block-ni__top">
+                    <div class="__dd__heading __dd__is--white __dd__is--center">
+                        <div class="__dd__heading__text">Спасибо за внимание!</div>
+                        <div class="__dd__heading__sub">В результате сотрудничества нами была разработана и изготовлена полиграфическая продукция для <br>
+                            Чайханы Шари Вари, состоящая из барных карт, обеденного меню, основного меню, винных карт, <br>
+                            тейбл-тентов и фирменных наклеек с учётом особенностей и фирменного стиля заведения. Мы рады <br>
+                            такому продуктивному сотрудничеству и впереди у нас с ними ещё много интересного.</div>
+                    </div>
+                </div>
+                <div class="__dd__block-ni__bottom __dd__anim" data-animtype="fadeInUp"><img src="img/bl9.svg" alt=""></div>
+            </div>
+        </div>
     </div>
     <script src="dist/js/jquery-3.3.1.min.js"></script>
     <script src="dist/js/svg4everybody.min.js"></script>
-    <script src="dist/js/bundle-min.js"></script>
+    <script src="dist/js/slick.min.js"></script>
+    <script src="dist/js/main.js"></script>
+    <!-- <script src="dist/js/bundle-min.js"></script> -->
     <script>
         svg4everybody();
     </script>
