--- a/src/html/blocks/block4.html
+++ b/src/html/blocks/block4.html
@@ -1,1 +1,24 @@
-<!-- block4 -->
+<div class="__dd__block-fo">
+    <div class="__dd__block-fo__inner">
+        <div class="__dd__block-fo__carousel">
+            <div class="__dd__block-fo__carousel__items">
+                <div class="__dd__block-fo__carousel__items__block">
+                    <img src="img/cr_1.png" alt="">
+                </div>
+                <div class="__dd__block-fo__carousel__items__block">
+                    <img src="img/cr_2.png" alt="">
+                </div>
+                <div class="__dd__block-fo__carousel__items__block">
+                    <img src="img/cr_3.png" alt="">
+                </div>
+                <div class="__dd__block-fo__carousel__items__block">
+                    <img src="img/cr_4.png" alt="">
+                </div>
+            </div>
+            <div class="__dd__block-fo__carousel__controls">
+                <button class="is--prev"><img src="img/control.png"></button>
+                <button class="is--next"><img src="img/control.png"></button>
+            </div>
+        </div>
+    </div>
+</div>
