--- a/src/html/blocks/block5.html
+++ b/src/html/blocks/block5.html
@@ -2,22 +2,22 @@
     <div class="__dd__block-fv__inner">
         <div class="__dd__block-fv__block">
             <div class="__dd__block-fv__block__inner">
-                <img src="img/bl5_1.jpg" alt="">
+                <img src="img/bl5_placeholder.jpg" data-src="img/bl5_1.jpg" class="lazy">
             </div>
         </div>
         <div class="__dd__block-fv__block">
             <div class="__dd__block-fv__block__inner">
-                <img src="img/bl5_2.jpg" alt="">
+                <img src="img/bl5_placeholder.jpg" data-src="img/bl5_2.jpg" class="lazy">
             </div>
         </div>
         <div class="__dd__block-fv__block">
             <div class="__dd__block-fv__block__inner">
-                <img src="img/bl5_3.jpg" alt="">
+                <img src="img/bl5_placeholder.jpg" data-src="img/bl5_3.jpg" class="lazy">
             </div>
         </div>
         <div class="__dd__block-fv__block">
             <div class="__dd__block-fv__block__inner">
-                <img src="img/bl5_4.jpg" alt="">
+                <img src="img/bl5_placeholder.jpg" data-src="img/bl5_4.jpg" class="lazy">
             </div>
         </div>
     </div>
