--- a/src/html/blocks/block6.html
+++ b/src/html/blocks/block6.html
@@ -1,1 +1,17 @@
-<!-- block6 -->
+<div class="__dd__block-sx">
+    <div class="__dd__block-sx__inner">
+        <div class="__dd__block-sx__top">
+            <div class="__dd__heading __dd__is--dark __dd__is--left">
+                <div class="__dd__heading__text">Винная карта</div>
+            </div>
+            <div class="__dd__descs __dd__container">
+                <div class="__dd__descs__inner">
+                    <div class="__dd__descs__block is--purple">
+                        <div class="__dd__descs__block__text">Выполненная нами полиграфическая продукция на дизайнерской фактурной бумаге Лён, цвет: Слоновая кость. Общий дизайн строится на гравюрах, поверх которых разводы вина. При использовании профессиональных красок и печати на дизайнерской бумаге создаётся чувство, будто на каждой из них стоял бокал настоящего вина, но что-то пошло не так.</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="__dd__block-sx__bottom __dd__anim" data-animtype="fadeInUp"><img src="img/bl6.jpg" alt=""></div>
+    </div>
+</div>
