--- a/src/html/blocks/block7.html
+++ b/src/html/blocks/block7.html
@@ -2,12 +2,12 @@
     <div class="__dd__block-fv__inner">
         <div class="__dd__block-fv__block">
             <div class="__dd__block-fv__block__inner">
-                <img src="img/bl7_1.jpg" alt="">
+                <img src="img/bl5_placeholder.jpg" data-src="img/bl7_1.jpg" class="lazy">
             </div>
         </div>
         <div class="__dd__block-fv__block">
             <div class="__dd__block-fv__block__inner">
-                <img src="img/bl7_2.jpg" alt="">
+                <img src="img/bl5_placeholder.jpg" data-src="img/bl7_2.jpg" class="lazy">
             </div>
         </div>
     </div>
