--- a/src/html/blocks/block8.html
+++ b/src/html/blocks/block8.html
@@ -1,1 +1,19 @@
-<!-- block8 -->
+<div class="__dd__block-ei">
+    <div class="__dd__block-ei__inner">
+        <div class="__dd__block-ei__top">
+            <div class="__dd__heading __dd__is--white __dd__is--left">
+                <div class="__dd__heading__text">Table tent</div>
+            </div>
+            <div class="__dd__descs __dd__container">
+                <div class="__dd__descs__inner">
+                    <div class="__dd__descs__block is--pepper">
+                        <div class="__dd__descs__block__heading">Задача</div>
+                        <div class="__dd__descs__block__text">Дизайн и полиграфическая продукция были разработаны и изготовлены специально для мероприятия «Ночь пожирателей рекламы 2019». Изделие выполнено в мексиканском стиле 
+                            и частично повторяет стиль билборда этого мероприятия.</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="__dd__block-ei__bottom __dd__anim" data-animtype="fadeInRight"><img src="img/bl8.jpg" alt=""></div>
+    </div>
+</div>
