--- a/src/html/blocks/block9.html
+++ b/src/html/blocks/block9.html
@@ -1,1 +1,14 @@
-<!-- block9 -->
+<div class="__dd__block-ni">
+    <div class="__dd__block-ni__inner">
+        <div class="__dd__block-ni__top">
+            <div class="__dd__heading __dd__is--white __dd__is--center">
+                <div class="__dd__heading__text">Спасибо за внимание!</div>
+                <div class="__dd__heading__sub">В результате сотрудничества нами была разработана и изготовлена полиграфическая продукция для <br>
+                     Чайханы Шари Вари, состоящая из барных карт, обеденного меню, основного меню, винных карт, <br>
+                      тейбл-тентов и фирменных наклеек с учётом особенностей и фирменного стиля заведения. Мы рады <br>
+                       такому продуктивному сотрудничеству и впереди у нас с ними ещё много интересного.</div>
+            </div>
+        </div>
+        <div class="__dd__block-ni__bottom __dd__anim" data-animtype="fadeInUp"><img src="img/bl9.svg" alt=""></div>
+    </div>
+</div>
