--- a/src/html/blocks/block2.html
+++ b/src/html/blocks/block2.html
@@ -8,16 +8,23 @@
                 <div class="__dd__descs__inner">
                     <div class="__dd__descs__block">
                         <div class="__dd__descs__block__heading">Задача</div>
-                        <div class="__dd__descs__block__text">Чайхана Шари Вари - это двухэтажный ресторан с кальянами, 
-                            живой музыкой и восточной кухней. Перед нами встала задача изготовить полиграфическую продукцию в фирменном стиле заведения, где главными факторами были единство и отражение многогранности, красочности и своеобразной идеологии ресторана.</div>
+                        <div class="__dd__descs__block__text">Чайхана Шари Вари - это двухэтажный ресторан с кальянами, <br>
+                            живой музыкой и восточной кухней. Перед нами встала задача <br>
+                             изготовить полиграфическую продукцию в фирменном стиле <br>
+                              заведения, где главными факторами были единство и отражение <br>
+                               многогранности, красочности и своеобразной идеологии ресторана.</div>
                     </div>
                     <div class="__dd__descs__block">
                         <div class="__dd__descs__block__heading">Решение</div>
-                        <div class="__dd__descs__block__text">В рамках фирменного стиля заведения нами были изготовлены барные карты и обеденное меню, а также разработан дизайн основного меню, винных карт, тейбл-тенты и фирменные наклейки в стиле ресторана.</div>
+                        <div class="__dd__descs__block__text">В рамках фирменного стиля заведения нами <br>
+                             были изготовлены барные карты и обеденное <br>
+                              меню, а также разработан дизайн основного <br>
+                               меню, винных карт, тейбл-тенты и фирменные <br>
+                                наклейки в стиле ресторана.</div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="__dd__block-tw__bottom"><img src="img/bl2.jpg" alt=""></div>
+        <div class="__dd__block-tw__bottom __dd__anim" data-animtype="fadeInUp"><img src="img/bl2.jpg" alt=""></div>
     </div>
 </div>
