--- a/src/html/blocks/block3.html
+++ b/src/html/blocks/block3.html
@@ -1,1 +1,20 @@
-<!-- block3 -->
+<div class="__dd__block-th">
+    <div class="__dd__block-th__inner">
+        <div class="__dd__block-th__top">
+            <div class="__dd__heading __dd__is--white __dd__is--left">
+                <div class="__dd__heading__text">Основное меню</div>
+            </div>
+            <div class="__dd__descs __dd__container">
+                <div class="__dd__descs__inner">
+                    <div class="__dd__descs__block">
+                        <div class="__dd__descs__block__text">Разработали и изготовили дизайн основного меню <br>
+                            в общей стилистике заведения. Обложку мы сделали <br>
+                            в тёмном стиле с применением метода лакирования, <br>
+                             что придаёт чувства стиля и подчеркивает <br> изысканность ресторана. </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="__dd__block-th__bottom __dd__anim" data-animtype="fadeInRight"><img src="img/bl3.jpg" alt=""></div>
+    </div>
+</div>
