--- a/src/html/index.html
+++ b/src/html/index.html
@@ -22,7 +22,9 @@
     </div>
     <script src="dist/js/jquery-3.3.1.min.js"></script>
     <script src="dist/js/svg4everybody.min.js"></script>
-    <script src="dist/js/bundle-min.js"></script>
+    <script src="dist/js/slick.min.js"></script>
+    <script src="dist/js/main.js"></script>
+    <!-- <script src="dist/js/bundle-min.js"></script> -->
     <script>svg4everybody();</script>
 </body>
 </html>
