changed image in 2 slider

--- a/src/html/blocks/block2.html
+++ b/src/html/blocks/block2.html
@@ -25,6 +25,6 @@
                 </div>
             </div>
         </div>
-        <div class="__dd__block-tw__bottom __dd__anim" data-animtype="fadeInUp"><img src="img/bl2.jpg" alt=""></div>
+        <div class="__dd__block-tw__bottom __dd__anim" data-animtype="fadeInUp"><img src="img/bl22.png" alt=""></div>
     </div>
 </div>
