--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="__dd__block-tw__bottom __dd__anim" data-animtype="fadeInUp"><img src="img/bl2.jpg" alt=""></div>
+                <div class="__dd__block-tw__bottom __dd__anim" data-animtype="fadeInUp"><img src="img/bl22.png" alt=""></div>
             </div>
         </div>
         <div class="__dd__block-th">
